--- a/homework/session02/bai tap1/b1.html
+++ b/homework/session02/bai tap1/b1.html
@@ -7,18 +7,23 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 style="color:red;">LẬP TRÌNH VIÊN QUỐC TẾ ACCP I16- CHƯƠNG TRÌNH 2 NĂM</h1>
-    <img src="https://aptech-danang.edu.vn/Content/ace/images/aptech/Accpi16/Banner.jpg" alt="" width="100%" height="80%">
-    <h2 style="color:red;text-align: center;">10 LỜI ÍCH KHI HỌC ACCP i16</h2>
-    <center><img src="		https://aptech-danang.edu.vn/Content/ace/images/icons/giang-vien.png" alt=""></center>
-    <h3 style="color:red;text-align: center;">KHÔNG LO THẤT NGHIỆP</h3>
-    <center><p>Cam kết có việc làm sau khi tốt nghiệp  </p></center>
-    <center><img src="	https://aptech-danang.edu.vn/Content/ace/images/aptech/Accpi16/2.png" alt=""></center>
-    <CEnter><h3 style="color:RED ;">BẢO HIỂM HỌC TẬP</h3></CEnter>
-    <center><p>Đảm bảo chắc chắn về kết quả học tập  </p></center>
-    <CENter><img src="	https://aptech-danang.edu.vn/Content/ace/images/aptech/Accpi16/6.png" alt=""></CENter>
-    <center><h3 style="color:RED ;">Học tập chủ động</h3></center>
-    <center>Học tập cùng giảng viên ngoài giờ học chính trên lớp</center>
-    <center><img src="https://aptech-danang.edu.vn/Content/ace/images/aptech/Accpi16/4.png" alt=""></center>
+    <header></header>
+    <nav></nav>
+    <div> 
+        <h1 style="color:red;">LẬP TRÌNH VIÊN QUỐC TẾ ACCP I16- CHƯƠNG TRÌNH 2 NĂM</h1>
+        <img src="https://aptech-danang.edu.vn/Content/ace/images/aptech/Accpi16/Banner.jpg" alt="" width="100%" height="80%">
+        <h2 style="color:red;text-align: center;">10 LỜI ÍCH KHI HỌC ACCP i16</h2>
+        <center><img src="		https://aptech-danang.edu.vn/Content/ace/images/icons/giang-vien.png" alt=""></center>
+        <h3 style="color:red;text-align: center;">KHÔNG LO THẤT NGHIỆP</h3>
+        <center><p>Cam kết có việc làm sau khi tốt nghiệp  </p></center>
+        <center><img src="	https://aptech-danang.edu.vn/Content/ace/images/aptech/Accpi16/2.png" alt=""></center>
+        <CEnter><h3 style="color:RED ;">BẢO HIỂM HỌC TẬP</h3></CEnter>
+        <center><p>Đảm bảo chắc chắn về kết quả học tập  </p></center>
+        <CENter><img src="	https://aptech-danang.edu.vn/Content/ace/images/aptech/Accpi16/6.png" alt=""></CENter>
+        <center><h3 style="color:RED ;">Học tập chủ động</h3></center>
+        <center>Học tập cùng giảng viên ngoài giờ học chính trên lớp</center>
+        <center><img src="https://aptech-danang.edu.vn/Content/ace/images/aptech/Accpi16/4.png" alt=""></center>
+    </div>
+    <footer></footer>
 </body>
 </html>
