--- a/homework/session02/bai tap3/p1.html
+++ b/homework/session02/bai tap3/p1.html
@@ -7,14 +7,17 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <h1 style="border-bottom:3px solid">Vietnam- Việt Nam</h1>
-        <img src="https://www.worldphoto.org/sites/default/files/gallery/images/2162653/cffa568c7f80f641373466db429e3a51.DJI_0488.jpg" width="99%" alt="">
-        <center><p>© Khanh Phan, Vietnam, Category Winner, Open competition, Travel, 2021 Sony World Photography Awards</p></center>
-        <p>Giải thưởng danh giá The National Awards (Giải Quốc Gia) tôn vinh những tài năng nhiếp ảnh tại hơn 60 quốc gia trên toàn thế giới. Giải thưởng được trao cho những bức ảnh nổi bật lấy từ 10 hạng mục cạnh tranh và tiếp thêm cơ hội để các nhiếp ảnh gia được công nhận và trao giải ở cấp quốc gia và trên trường quốc tế.</p>
-        <p >Sau 8 năm phát động, hơn 400 người chiến thắng và những cá nhân lọt vào vòng chung kết Giải Quốc Gia đã được công bố trên toàn cầu. Người chiến thắng sẽ nhận được nhiều giải thưởng giá trị như những thiết bị ảnh số của Sony hay cơ hội ghi dấu ấn bằng tác phẩm của mình vào cuốn sách Sony World Photography Awards</p>
-        <a href="https://www.worldphoto.org/vi/sony-world-photography-awards/2018/open" style="font-size: 24px;">Tham gia ngay!</a>
-        <p style="font-size:20px;">Lưu ý :</p>
-        <p>-Để đủ điều kiện tham gia Giải Quốc Gia, bạn phải có quốc tịch của quốc gia thuộc danh sách tham gia vào The National Award và hiện đang cư trú tại quốc gia đó trong thời điểm diễn ra giải thưởng.</p>
-        <p>- Tất cả những hình ảnh được gửi vào bất kỳ hạng mục nào của Giải thưởng nhiếp ảnh thế giới Sony sẽ tự động được đưa vào Giải Quốc Gia.</p>          
+        <header></header>
+        <div><h1 style="border-bottom:3px solid">Vietnam- Việt Nam</h1>
+            <img src="https://www.worldphoto.org/sites/default/files/gallery/images/2162653/cffa568c7f80f641373466db429e3a51.DJI_0488.jpg" width="99%" alt="">
+            <center><p>© Khanh Phan, Vietnam, Category Winner, Open competition, Travel, 2021 Sony World Photography Awards</p></center>
+            <p>Giải thưởng danh giá The National Awards (Giải Quốc Gia) tôn vinh những tài năng nhiếp ảnh tại hơn 60 quốc gia trên toàn thế giới. Giải thưởng được trao cho những bức ảnh nổi bật lấy từ 10 hạng mục cạnh tranh và tiếp thêm cơ hội để các nhiếp ảnh gia được công nhận và trao giải ở cấp quốc gia và trên trường quốc tế.</p>
+            <p >Sau 8 năm phát động, hơn 400 người chiến thắng và những cá nhân lọt vào vòng chung kết Giải Quốc Gia đã được công bố trên toàn cầu. Người chiến thắng sẽ nhận được nhiều giải thưởng giá trị như những thiết bị ảnh số của Sony hay cơ hội ghi dấu ấn bằng tác phẩm của mình vào cuốn sách Sony World Photography Awards</p>
+            <a href="https://www.worldphoto.org/vi/sony-world-photography-awards/2018/open" style="font-size: 24px;">Tham gia ngay!</a>
+            <p style="font-size:20px;">Lưu ý :</p>
+            <p>-Để đủ điều kiện tham gia Giải Quốc Gia, bạn phải có quốc tịch của quốc gia thuộc danh sách tham gia vào The National Award và hiện đang cư trú tại quốc gia đó trong thời điểm diễn ra giải thưởng.</p>
+            <p>- Tất cả những hình ảnh được gửi vào bất kỳ hạng mục nào của Giải thưởng nhiếp ảnh thế giới Sony sẽ tự động được đưa vào Giải Quốc Gia.</p>
+        </div>
+        <footer></footer>           
     </body>
 </html>
