--- a/homework/session02/bai tap3/p2.html
+++ b/homework/session02/bai tap3/p2.html
@@ -7,13 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 style="border-bottom:2px solid ;">Austria - Österreich</h1>
-    <img src="https://www.worldphoto.org/sites/default/files/gallery/images/2507539/f3f8577a333bc4ca7861163246a50ccb.DSC06565.jpg" alt=""width=90%>
-    <center><p>© Michaela Steiner, Austria, National Award Winner, 2021 Sony World Photography Awards</p></center>
-    <p>Das National Awards-Programm würdigt lokale Fototalente aus mehr als 60 Ländern weltweit und bietet Fotografen die Möglichkeit, sowohl auf lokaler wie auch internationaler Ebene beachtet und gewürdigt zu werden. Ausgezeichnet werden Einzelbilder aus allen zehn Kategorien des offenen Wettbewerbs.</p>
-    <p>Mehr als 400 Gewinner und Finalisten der National Awards konnten auf diese Weise seit Beginn des Programms vor acht Jahren globale Aufmerksamkeit genießen. Die Gewinner erhalten eine digitale Fotoausrüstung von Sony zu sehen sein und im Gewinnerbuch der Sony World Photography Awards 2020 aufgeführt.</p>
-    <a href="https://www.worldphoto.org/de/sony-world-photography-awards/2018/open" style="text-decoration: none;">JETZT TEILNEHMEN</a>
-    <p>Bitte beachten Sie:</p>
-    <p>Um beim Austrian National Award teilnehmen zu können, müssen Sie österreichischer Staatsbürger und derzeit sowie während der gesamten Zeit der Sony World Photography Awards in Österreich wohnhaft sein. Alle Fotos, die in einer der zehn Kategorien des Offenen Wettbewerbs der Sony World Photography Awards eingereicht werden, werden automatisch für den National Award berücksichtigt.</p>
+    <header></header>
+    <div>
+        <h1 style="border-bottom:2px solid ;">Austria - Österreich</h1>
+        <img src="https://www.worldphoto.org/sites/default/files/gallery/images/2507539/f3f8577a333bc4ca7861163246a50ccb.DSC06565.jpg" alt=""width=90%>
+        <center><p>© Michaela Steiner, Austria, National Award Winner, 2021 Sony World Photography Awards</p></center>
+        <p>Das National Awards-Programm würdigt lokale Fototalente aus mehr als 60 Ländern weltweit und bietet Fotografen die Möglichkeit, sowohl auf lokaler wie auch internationaler Ebene beachtet und gewürdigt zu werden. Ausgezeichnet werden Einzelbilder aus allen zehn Kategorien des offenen Wettbewerbs.</p>
+        <p>Mehr als 400 Gewinner und Finalisten der National Awards konnten auf diese Weise seit Beginn des Programms vor acht Jahren globale Aufmerksamkeit genießen. Die Gewinner erhalten eine digitale Fotoausrüstung von Sony zu sehen sein und im Gewinnerbuch der Sony World Photography Awards 2020 aufgeführt.</p>
+        <a href="https://www.worldphoto.org/de/sony-world-photography-awards/2018/open" style="text-decoration: none;">JETZT TEILNEHMEN</a>
+        <p>Bitte beachten Sie:</p>
+        <p>Um beim Austrian National Award teilnehmen zu können, müssen Sie österreichischer Staatsbürger und derzeit sowie während der gesamten Zeit der Sony World Photography Awards in Österreich wohnhaft sein. Alle Fotos, die in einer der zehn Kategorien des Offenen Wettbewerbs der Sony World Photography Awards eingereicht werden, werden automatisch für den National Award berücksichtigt.</p>
+    </div>
+    <footer></footer>
 </body>
 </html>
